--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -6,7 +6,7 @@
         </a>
         <ul class="sidebar-nav">
             <li class="sidebar-header">
-                Pages
+                Setting, tools
             </li>
 <!--            <li class="sidebar-item active">-->
             <li class="sidebar-item">
@@ -23,7 +23,7 @@
 
             <li class="sidebar-item">
                 <a class="sidebar-link" href="/sign-in">
-                    <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign In</span>
+                    <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign out</span>
                 </a>
             </li>
 
@@ -35,21 +35,26 @@
 <!--            </li>-->
 
             <li class="sidebar-header">
-                Tools & Components
+                Admin app
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/forms">
-                    <i class="align-middle" data-feather="check-square"></i> <span
-                        class="align-middle">Forms</span>
+                <a class="sidebar-link" href="/sound">
+                    <i class="align-middle" data-feather="headphones"></i> <span
+                        class="align-middle">Sound</span>
                 </a>
             </li>
             <li class="sidebar-item">
                 <a class="sidebar-link" href="icons-feather.html">
-                    <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Icons</span>
+                    <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">Person management</span>
                 </a>
             </li>
-
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="/charts">
+                    <i class="align-middle" data-feather="book"></i> <span
+                        class="align-middle">Diary management</span>
+                </a>
+            </li>
             <li class="sidebar-header">
                 Plugins & Addons
             </li>
@@ -62,7 +67,7 @@
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/maps">
+                <a class="sidebar-link" href="/icons-feather">
                     <i class="align-middle" data-feather="map"></i> <span class="align-middle">Maps</span>
                 </a>
             </li>
