--- a/src/main/webapp/template/page/sound.html
+++ b/src/main/webapp/template/page/sound.html
@@ -13,19 +13,24 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4">
-                <div class="card-header">
-                    <h5 class="card-title mb-0">Audio File</h5>
-                </div>
-                <div class="card-body">
-                    <input type="file" accept="audio/*" id="audioInput">
-                    <audio controls id="audioPlayer" style="margin-top: 10px;"></audio>
-                </div>
-            </div>
-        </div>
+
         <div class="row">
             <div class="col-12 col-lg-6">
+                <!--                <form th:href="@{/api/v1/admin/sound}" method="POST" >-->
+                <div class="card">
+                    <div class="row">
+                        <div class="col-4" th:action="@{/api/v1/admin/sound/upload2}" th:object="${add_sound}"
+                             method="POST" enctype="multipart/form-data">
+                            <div class="card-header">
+                                <h5 class="card-title mb-0">Audio File</h5>
+                            </div>
+                            <div class="card-body">
+                                <input type="file" accept="audio/*" id="audioInput">
+                                <audio controls id="audioPlayer" style="margin-top: 10px;"></audio>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="row">
                         <div class="col-6">
@@ -33,8 +38,7 @@
                                 <h5 class="card-title mb-0">Tên audio:</h5>
                             </div>
                             <div class="card-body">
-                                <input id="number" type="text" class="form-control"
-                                       placeholder="">
+                                <input id="title" type="text" class="form-control" placeholder="">
                             </div>
                         </div>
                     </div>
@@ -48,7 +52,7 @@
                                 <h5 class="card-title mb-0">Ca sĩ, tác giả trình bày:</h5>
                             </div>
                             <div class="card-body">
-                                <input id="lane" type="text" class="form-control" placeholder="">
+                                <input id="author" type="text" class="form-control" placeholder="">
                             </div>
                         </div>
                     </div>
@@ -58,11 +62,14 @@
                     <div class="row">
                         <div class=" col-4">
                             <div class="card-header">
-                                <h5 class="card-title mb-0">Thể loại theo tâm trạng:</h5>
+                                <!--                                    <h5 class="card-title mb-0">Thể loại theo tâm trạng:</h5>-->
+                                <label for="moodSound">Thể loại theo tâm trạng:</label>
                             </div>
                             <div class="card-body">
-                                <select id="mood" class="form-select mb-3">
+                                <select id="moodSound" name="moodSound" class="form-control form-select mb-3">
                                     <option value="" selected disabled>Chọn</option>
+                                    <option th:each="o : ${moodSound}" th:value="${o.id}">[[${o.moodSound}]]
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -70,14 +77,14 @@
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class=" col-4">
+                        <div class="col-4">
                             <div class="card-header">
                                 <h5 class="card-title mb-0">Poster</h5>
                             </div>
                             <div class="card-body">
                                 <img id="previewImage" alt="Preview" width="80" height="80">
-                                <input type="file" accept="image/*" onchange="displayImage(this)">
-
+                                <input type="file" accept="image/*" onchange="displayImage(this)" name="multipartFile">
+                                <button type="submit">Upload</button>
                             </div>
                         </div>
                     </div>
@@ -88,14 +95,19 @@
 
                         <div class="card-body text-center">
                             <div class="mb-3">
-<!--                                <button class="btn btn-primary btn-sm">Small</button>-->
+
+
+                                <!--                                <button class="btn btn-primary btn-sm">Small</button>-->
                                 <button id="create" class="btn btn-primary">Thêm</button>
-<!--                                <button class="btn btn-primary btn-lg">Large</button>-->
+                                <!--                                    <input type="submit" value="submit" class="btn btn-primary">Thêm</input>-->
+                                <!--                                <button class="btn btn-primary btn-lg">Large</button>-->
                             </div>
                         </div>
-
                     </div>
                 </div>
+
+
+                <!--            </form>-->
             </div>
         </div>
     </div>
@@ -107,32 +119,26 @@
             if (file) {
                 const objectURL = URL.createObjectURL(file);
                 audioPlayer.src = objectURL;
-            } else {
-                audioPlayer.src = ''; // Clear the source if no file selected
             }
         });
         function displayImage(input) {
-            const preview = document.getElementById('previewImage');
-            const file = input.files[0];
-
-            if (file) {
+            const previewImage = document.getElementById('previewImage');
+            if (input.files && input.files[0]) {
                 const reader = new FileReader();
-
                 reader.onload = function (e) {
-                    preview.src = e.target.result;
+                    previewImage.src = e.target.result;
                 };
-
-                reader.readAsDataURL(file);
-            } else {
-                preview.src = ''; // Clear the preview if no file selected
+                reader.readAsDataURL(input.files[0]);
             }
         }
+
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
-    <script src="js/address.js"></script>
-    <script src="js/map.js"></script>
+    <!--    <script src="js/address.js"></script>-->
+    <script src="js/sound.js"></script>
 
 </main>
 </body>
+
 </html>
