--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -17,162 +17,30 @@
         <div class="col-12">
 
 
-            <h3 class="text-center">list of products</h3>
+            <h3 class="text-center">list of Sounds</h3>
             <hr>
             <table class="table">
                 <thead class="thead-dark">
                 <tr>
+                    <th scope="col">ID Sound</th>
                     <th scope="col">poster</th>
                     <th scope="col">title</th>
                     <th scope="col">author</th>
                     <th scope="col">mood sound</th>
-                    <th scope="col">delete product</th>
+                    <th scope="col">update</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="sound : ${soundList}">
-                    <th scope="row"><img alt="" th:src="*{'data:image/jpeg;base64,'+*{sound.poster}}"
-                                         style="width: 100px;height: 100px;"></th>
-                    <td>[[*{sound.title}]]
-                        <!-- Button trigger modal --> <br>
-                        <button type="button" class="btn btn-success btn-sm mt-2"
-                                data-toggle="modal"
-                                th:attr="data-target='#exampleModalCenter'+*{sound.id}">change
-                            name
-                        </button> <!-- Modal -->
-
-                        <div class="modal fade"
-                             th:id="*{'exampleModalCenter'+*{sound.id}}" tabindex="-1"
-                             role="dialog" aria-labelledby="exampleModalCenterTitle"
-                             aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">change
-                                            product name</h5>
-                                        <button type="button" class="close" data-dismiss="modal"
-                                                aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form action="/changeName" method="post">
-                                            <div class="form-group">
-                                                <label>product id</label> <input type="hidden"
-                                                                                 th:value="*{sound.id}"
-                                                                                 class="form-control" name="id">
-                                                <label>new sound name</label> <input type="text"
-                                                                                       name="newPname"
-                                                                                       class="form-control"> <br>
-                                                <button type="submit" class="btn btn-primary">submit</button>
-                                            </div>
-                                        </form>
-
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close
-                                        </button>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
+                    <td th:text="${sound.id}"></td>
+                    <th scope="row"><img alt="" th:src="'data:image/jpeg;base64,' + ${sound.poster}" style="width: 100px;height: 100px;"></th>
+                    <td th:text="${sound.title}"></td>
+                    <td th:text="${sound.author}"></td>
+                    <td th:text="${sound.moodSound}"></td>
+                    <td>
+                        <button class="update">
+                        </button>
                     </td>
-                    <td>[[*{product.description}]] <!-- Button trigger modal -->
-                        <br>
-                        <button type="button" class="btn btn-success btn-sm mt-2"
-                                data-toggle="modal"
-                                th:attr="data-target='#exampleModalCenterDesc'+${product.id}">change
-                            description
-                        </button> <!-- Modal -->
-                        <div class="modal fade"
-                             th:id="*{'exampleModalCenterDesc'+*{product.id}}" tabindex="-1"
-                             role="dialog" aria-labelledby="exampleModalCenterTitle"
-                             aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">change
-                                            product description</h5>
-                                        <button type="button" class="close" data-dismiss="modal"
-                                                aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-
-                                        <form action="/changeDescription" method="post">
-                                            <div class="form-group">
-                                                <label>product id</label> <input type="text"
-                                                                                 th:value="*{product.id}"
-                                                                                 class="form-control" name="id">
-                                                <label>new Product description</label> <input type="text"
-                                                                                              name="newDescription"
-                                                                                              class="form-control"> <br>
-                                                <button type="submit" class="btn btn-primary">submit</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close
-                                        </button>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                    <td>[[*{product.price}]] <!-- Button trigger modal --> <br>
-                        <button type="button" class="btn btn-success btn-sm mt-2"
-                                data-toggle="modal"
-                                th:attr="data-target='#exampleModalCenterPrice'+${product.id}">change
-                            price
-                        </button> <!-- Modal -->
-                        <div class="modal fade"
-                             th:id="*{'exampleModalCenterPrice'+*{product.id}}" tabindex="-1"
-                             role="dialog" aria-labelledby="exampleModalCenterTitle"
-                             aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle">change
-                                            product price</h5>
-                                        <button type="button" class="close" data-dismiss="modal"
-                                                aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-
-                                        <form action="/changePrice" method="post">
-                                            <div class="form-group">
-                                                <label>product id</label> <input type="text"
-                                                                                 th:value="*{product.id}"
-                                                                                 class="form-control" name="id">
-                                                <label>new Product price</label> <input type="text"
-                                                                                        name="newPrice"
-                                                                                        class="form-control"> <br>
-                                                <button type="submit" class="btn btn-primary">submit</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close
-                                        </button>
-                                        <button type="button" class="btn btn-primary">Save
-                                            changes
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                    <td><a th:href="@{/deleteProd/{id}(id=${product.id})}"
-                           class="btn btn-danger mt-4">delete</a></td>
                 </tr>
                 </tbody>
             </table>
@@ -186,6 +54,7 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
+    <script src="js/list-sound.js"></script>
 
 </main>
 </body>
