--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -45,7 +45,12 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="icons-feather.html">
+                <a class="sidebar-link" href="/list-sound">
+                    <i class="align-middle" data-feather="map"></i> <span class="align-middle">List sound</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="/user">
                     <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">Person management</span>
                 </a>
             </li>
@@ -63,12 +68,6 @@
                 <a class="sidebar-link" href="/charts">
                     <i class="align-middle" data-feather="bar-chart-2"></i> <span
                         class="align-middle">Charts</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="/list-sound">
-                    <i class="align-middle" data-feather="map"></i> <span class="align-middle">List sound</span>
                 </a>
             </li>
         </ul>
