--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -21,19 +21,12 @@
                 </a>
             </li>
 
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="/sign-in">
-                    <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign out</span>
-                </a>
-            </li>
-
 <!--            <li class="sidebar-item">-->
 <!--                <a class="sidebar-link" href="/sign-up">-->
 <!--                    <i class="align-middle" data-feather="user-plus"></i> <span-->
 <!--                        class="align-middle">Sign Up</span>-->
 <!--                </a>-->
 <!--            </li>-->
-
             <li class="sidebar-header">
                 Admin app
             </li>
@@ -60,14 +53,15 @@
                         class="align-middle">Diary management</span>
                 </a>
             </li>
-            <li class="sidebar-header">
-                Plugins & Addons
-            </li>
-
             <li class="sidebar-item">
                 <a class="sidebar-link" href="/charts">
                     <i class="align-middle" data-feather="bar-chart-2"></i> <span
                         class="align-middle">Charts</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="/login">
+                    <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign out</span>
                 </a>
             </li>
         </ul>
