--- a/src/main/webapp/template/page/user-manager.html
+++ b/src/main/webapp/template/page/user-manager.html
@@ -53,7 +53,7 @@
                             </button>
                         </td>
                         <td>
-                            <button class="btn btn-outline-danger">Delete
+                            <button class="btn btn-outline-danger" data-account-id="${account.id}">Delete
                             </button>
                         </td>
                     </tr>
@@ -70,7 +70,7 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
-
+    <script src="js/user.js"></script>
 </main>
 </body>
 
