--- a/src/main/webapp/template/page/user-manager.html
+++ b/src/main/webapp/template/page/user-manager.html
@@ -53,8 +53,7 @@
                             </button>
                         </td>
                         <td>
-                            <button class="btn btn-outline-danger" data-account-id="${account.id}">Delete
-                            </button>
+                            <button class="btn btn-outline-danger" data-account-id="${account.id}" onclick="deleteEntity('${account.id}')">Delete</button>
                         </td>
                     </tr>
                     </tbody>
