--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -60,6 +60,12 @@
                 </a>
             </li>
             <li class="sidebar-item">
+                <a class="sidebar-link" href="/user-detail">
+                    <i class="align-middle" data-feather="bar-chart-2"></i> <span
+                        class="align-middle">User detail</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
                 <a class="sidebar-link" href="/login">
                     <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign out</span>
                 </a>
