--- a/src/main/webapp/template/page/user-detail.html
+++ b/src/main/webapp/template/page/user-detail.html
@@ -59,24 +59,25 @@
                             <div class="col-10 ps-2">
                                 <div class="text-dark" th:text="${diary.nickname}"></div>
                                 <div class="text-muted small mt-1" th:text="${diary.happened}"></div>
-                                <div class="text-muted small mt-1" th:text="${#dates.format(diary.createdAt, 'HH:mm')} ago"></div>
+                                <div class="text-muted small mt-1"
+                                     th:text="${#dates.format(diary.createdAt, 'HH:mm')} ago"></div>
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="list-group-item">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-2">
-                                <img src="img/avatars/avatar-2.jpg" class="avatar img-fluid rounded-circle"
-                                     alt="William Harris">
-                            </div>
-                            <div class="col-10 ps-2">
-                                <div class="text-dark">William Harris</div>
-                                <div class="text-muted small mt-1">Curabitur ligula sapien euismod vitae.
-                                </div>
-                                <div class="text-muted small mt-1">2h ago</div>
-                            </div>
-                        </div>
-                    </a>
+<!--                    <a href="#" class="list-group-item">-->
+<!--                        <div class="row g-0 align-items-center">-->
+<!--                            <div class="col-2">-->
+<!--                                <img src="img/avatars/avatar-2.jpg" class="avatar img-fluid rounded-circle"-->
+<!--                                     alt="William Harris">-->
+<!--                            </div>-->
+<!--                            <div class="col-10 ps-2">-->
+<!--                                <div class="text-dark">William Harris</div>-->
+<!--                                <div class="text-muted small mt-1">Curabitur ligula sapien euismod vitae.-->
+<!--                                </div>-->
+<!--                                <div class="text-muted small mt-1">2h ago</div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </a>-->
                 </div>
             </div>
 
