--- a/src/main/webapp/template/layout/default.html
+++ b/src/main/webapp/template/layout/default.html
@@ -14,8 +14,8 @@
 	<title>AdminKit</title>
 	<link href="css/app.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
+<!--	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">-->
+<!--	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
 
 </head>
 <body>
