--- a/src/main/webapp/template/page/charts-chartjs.html
+++ b/src/main/webapp/template/page/charts-chartjs.html
@@ -23,110 +23,71 @@
 
 <body>
 <div class="wrapper">
-    <nav id="sidebar" class="sidebar js-sidebar">
+    <nav th:fragment="header-left">
         <div class="sidebar-content js-simplebar">
-            <a class="sidebar-brand" href="index.html">
-                <span class="align-middle">AdminKit</span>
+            <a class="sidebar-brand" href="/">
+                <img src="img/avatars/logo.png" class="avatar img-fluid rounded me-1" alt="Charles Hall"/>
+                <span id="username" class="align-middle"></span>
             </a>
-
             <ul class="sidebar-nav">
                 <li class="sidebar-header">
-                    Pages
+                    Setting, tools
                 </li>
-
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="index.html">
-                        <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
+                    <a class="sidebar-link" href="/">
+                        <i class="align-middle" data-feather="sliders"></i> <span
+                            class="align-middle">Dashboard</span>
                     </a>
                 </li>
-
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="pages-profile.html">
+                    <a class="sidebar-link" href="/profile">
                         <i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
                     </a>
                 </li>
-
-                <li class="sidebar-item">
-                    <a class="sidebar-link" href="pages-sign-in.html">
-                        <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign In</span>
-                    </a>
-                </li>
-
-                <li class="sidebar-item">
-                    <a class="sidebar-link" href="pages-sign-up.html">
-                        <i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Sign Up</span>
-                    </a>
-                </li>
-
-                <li class="sidebar-item">
-                    <a class="sidebar-link" href="pages-blank.html">
-                        <i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
-                    </a>
-                </li>
-
                 <li class="sidebar-header">
-                    Tools & Components
+                    Admin app
                 </li>
 
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="ui-buttons.html">
-                        <i class="align-middle" data-feather="square"></i> <span class="align-middle">Buttons</span>
+                    <a class="sidebar-link" href="/sound">
+                        <i class="align-middle" data-feather="headphones"></i> <span
+                            class="align-middle">Sound</span>
                     </a>
                 </li>
-
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="ui-forms.html">
-                        <i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Forms</span>
+                    <a class="sidebar-link" href="/list-sound">
+                        <i class="align-middle" data-feather="map"></i> <span class="align-middle">List sound</span>
                     </a>
                 </li>
-
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="ui-cards.html">
-                        <i class="align-middle" data-feather="grid"></i> <span class="align-middle">Cards</span>
+                    <a class="sidebar-link" href="/user">
+                        <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">Person management</span>
                     </a>
                 </li>
-
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="ui-typography.html">
-                        <i class="align-middle" data-feather="align-left"></i> <span
-                            class="align-middle">Typography</span>
+                    <a class="sidebar-link" href="/charts">
+                        <i class="align-middle" data-feather="book"></i> <span
+                            class="align-middle">Diary management</span>
                     </a>
                 </li>
-
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="icons-feather.html">
-                        <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Icons</span>
+                    <a class="sidebar-link" href="/charts">
+                        <i class="align-middle" data-feather="bar-chart-2"></i> <span
+                            class="align-middle">Charts</span>
                     </a>
                 </li>
-
-                <li class="sidebar-header">
-                    Plugins & Addons
-                </li>
-
-                <li class="sidebar-item active">
-                    <a class="sidebar-link" href="charts-chartjs.html">
-                        <i class="align-middle" data-feather="bar-chart-2"></i> <span class="align-middle">Charts</span>
-                    </a>
-                </li>
-
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="maps-google.html">
-                        <i class="align-middle" data-feather="map"></i> <span class="align-middle">Maps</span>
+                    <a class="sidebar-link" href="/user-detail">
+                        <i class="align-middle" data-feather="bar-chart-2"></i> <span
+                            class="align-middle">User detail</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" href="/login">
+                        <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign out</span>
                     </a>
                 </li>
             </ul>
-
-            <div class="sidebar-cta">
-                <div class="sidebar-cta-content">
-                    <strong class="d-inline-block mb-2">Upgrade to Pro</strong>
-                    <div class="mb-3 text-sm">
-                        Are you looking for more components? Check out our premium version.
-                    </div>
-                    <div class="d-grid">
-                        <a href="upgrade-to-pro.html" class="btn btn-primary">Upgrade to Pro</a>
-                    </div>
-                </div>
-            </div>
         </div>
     </nav>
 
