--- a/src/main/webapp/template/page/user-manager.html
+++ b/src/main/webapp/template/page/user-manager.html
@@ -37,9 +37,10 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr  class=".text-md-center" th:each="account : ${accountList}" th:onclick="|test('${account.id}')|">
+                    <tr class=".text-md-center" th:each="account : ${accountList}" th:onclick="|test('${account.id}')|">
                         <td th:text="${account.id}"></td>
-                        <th scope="row"><img class="rounded" alt="Cinque Terre" th:src="${account.avatar}" style="width: 100px;height: 100px;"></th>
+                        <th scope="row"><img class="rounded" alt="Cinque Terre" th:src="${account.avatar}"
+                                             style="width: 100px;height: 100px;"></th>
                         <td th:text="${account.firstName}"></td>
                         <td th:text="${account.lastName}"></td>
                         <td th:text="${account.nickName}"></td>
@@ -53,7 +54,9 @@
                             </button>
                         </td>
                         <td>
-                            <button class="btn btn-outline-danger" data-account-id="${account.id}" onclick="deleteEntity('${account.id}')">Delete</button>
+                            <button class="btn btn-outline-danger" data-account-id="${account.id}"
+                                    onclick="deleteEntity('${account.id}')">Delete
+                            </button>
                         </td>
                     </tr>
                     </tbody>
