--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -19,31 +19,40 @@
 
             <h3 class="text-center">List of Sounds</h3>
             <hr>
-            <table class="table">
-                <thead class="thead-dark">
-                <tr>
-                    <th scope="col">ID Sound</th>
-                    <th scope="col">poster</th>
-                    <th scope="col">title</th>
-                    <th scope="col">author</th>
-                    <th scope="col">mood sound</th>
-                    <th scope="col">update</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="sound : ${soundList}">
-                    <td th:text="${sound.id}"></td>
-                    <th scope="row"><img class="rounded" alt="Cinque Terre" th:src="${sound.poster}" style="width: 100px;height: 100px;"></th>
-                    <td th:text="${sound.title}"></td>
-                    <td th:text="${sound.author}"></td>
-                    <td th:text="${sound.moodSound}"></td>
-                    <td>
-                        <button class="btn btn-outline-secondary">Update
-                        </button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">ID Sound</th>
+                        <th scope="col">Poster</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Author</th>
+                        <th scope="col">Mood sound</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="sound : ${soundList}">
+                        <td th:text="${sound.id}"></td>
+                        <th scope="row"><img class="rounded" alt="Cinque Terre" th:src="${sound.poster}"
+                                             style="width: 100px;height: 100px;"></th>
+                        <td th:text="${sound.title}"></td>
+                        <td th:text="${sound.author}"></td>
+                        <td th:text="${sound.moodSound}"></td>
+                        <td>
+                            <button class="btn btn-outline-secondary">Update
+                            </button>
+                        </td>
+                        <td>
+                            <button class="btn btn-outline-danger">Delete
+                            </button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
             <hr>
         </div>
     </div>
