--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -40,7 +40,7 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/charts">
+                <a class="sidebar-link" href="/diary-manager">
                     <i class="align-middle" data-feather="book"></i> <span
                         class="align-middle">Diary management</span>
                 </a>
@@ -77,6 +77,7 @@
                         <span class="indicator">4</span>
                     </div>
                 </a>
+
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0" aria-labelledby="alertsDropdown">
                     <div class="dropdown-menu-header">
                         4 New Notifications
