--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -45,7 +45,7 @@
                             </button>
                         </td>
                         <td>
-                            <button class="btn btn-outline-danger">Delete
+                            <button class="btn btn-outline-danger" onclick="deleteAudio(${sound.id})">Delete
                             </button>
                         </td>
                     </tr>
