--- a/src/main/webapp/template/page/user-manager.html
+++ b/src/main/webapp/template/page/user-manager.html
@@ -5,7 +5,17 @@
 
 <body>
 <main class="content" layout:fragment="content">
+
     <div class="container-fluid p-0">
+        <div class="input-group">
+            <div id="search-autocomplete" class="form-outline" data-mdb-input-init>
+                <input type="search" id="form1" class="form-control" />
+                <label class="form-label" for="form1">Search</label>
+            </div>
+            <button type="button" class="btn btn-primary" data-mdb-ripple-init>
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="mb-3">
