--- a/src/main/webapp/template/layout/default.html
+++ b/src/main/webapp/template/layout/default.html
@@ -11,11 +11,13 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="shotcut icon" href="img/icons/icon-48x48.png"/>
 	<link rel="canonical" href="https://demo-basic.adminkit.io/"/>
-	<title>AdminKit</title>
+	<title>ABC</title>
 	<link href="css/app.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 <!--	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">-->
 <!--	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
 </head>
 <body>
