--- a/src/main/webapp/template/layout/default.html
+++ b/src/main/webapp/template/layout/default.html
@@ -9,9 +9,9 @@
 	<meta name="keywords"
 		  content="adminkit, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link rel="shotcut icon" href="img/icons/icon-48x48.png"/>
+	<link rel="shotcut icon" href="img/icons/icon2.png"/>
 	<link rel="canonical" href="https://demo-basic.adminkit.io/"/>
-	<title>ABC</title>
+	<title>Diary ADMIN</title>
 	<link href="css/app.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 <!--	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">-->
