--- a/src/main/webapp/template/page/list-sound.html
+++ b/src/main/webapp/template/page/list-sound.html
@@ -6,7 +6,15 @@
 <body>
 <main class="content" layout:fragment="content">
     <div class="container-fluid p-0">
-        <div class="row">
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <form class="d-flex" style="margin-left: 40%">
+                    <input class="form-control me-5" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+        <div class="row" style="margin-top: 20px">
             <div class="col-12 col-lg-6">
                 <div class="mb-3">
                     <h1 class="h3 d-inline align-middle">Thông tin âm thanh</h1>
