--- a/src/main/webapp/template/layout/default.html
+++ b/src/main/webapp/template/layout/default.html
@@ -14,8 +14,9 @@
 	<title>Diary ADMIN</title>
 	<link href="css/app.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
+<!--	<link rel="stylesheet" href="css/user-manager.css">-->
+<!--	<link rel="stylesheet" href="index.css">-->
 <!--	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">-->
-<!--	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
