--- a/src/main/webapp/template/page/login.html
+++ b/src/main/webapp/template/page/login.html
@@ -176,6 +176,8 @@
         <span>created by hung giang</span>
     </p>
 </section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="js/default.js"></script>
 <script src="js/app.js"></script>
 <script src="js/auth.js"></script>
 </body></html>
