--- a/src/main/webapp/template/page/user-detail.html
+++ b/src/main/webapp/template/page/user-detail.html
@@ -15,7 +15,7 @@
 
     <link rel="canonical" href="https://demo-basic.adminkit.io/charts-chartjs.html"/>
 
-    <title>Chart.js | AdminKit Demo</title>
+    <title>Diary ADMIN</title>
 
     <link href="css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -69,12 +69,12 @@
                             class="align-middle">Diary management</span>
                     </a>
                 </li>
-                <li class="sidebar-item">
-                    <a class="sidebar-link" href="/charts">
-                        <i class="align-middle" data-feather="bar-chart-2"></i> <span
-                            class="align-middle">Charts</span>
-                    </a>
-                </li>
+<!--                <li class="sidebar-item">-->
+<!--                    <a class="sidebar-link" href="/charts">-->
+<!--                        <i class="align-middle" data-feather="bar-chart-2"></i> <span-->
+<!--                            class="align-middle">Charts</span>-->
+<!--                    </a>-->
+<!--                </li>-->
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="/login">
                         <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign out</span>
@@ -317,7 +317,7 @@
                         <div class="list-group">
                             <div th:each="diary : ${diaries}" class="list-group-item">
                                 <div class="row g-0 align-items-center">
-                                    <div class="col-2">
+                                    <div class="col-1">
                                         <img th:src="${diary.avatar}" class="avatar img-fluid rounded-circle" width="50" height="50" alt="User Avatar">
                                     </div>
                                     <div class="col-4 inline-block-container">
@@ -328,9 +328,14 @@
                                         <div style="display: inline-block;">
                                             <strong><div class="text-dark" th:text="${diary.mood}"></div></strong>
                                         </div>
-                                        <div class="text-muted small mt-1" th:text="${diary.happened}"></div>
+                                        <div class="time-box text-muted small mt-1" th:attr="data-action-time=${diary.createdAt}">
+                                            10p
+                                        </div>
+                                        <div class="text-nowrap bd-highlight" th:text="${diary.happened}"></div>
+
                                         <div class="text-muted small mt-1"
-                                             th:text="${#temporals.format(T(java.time.LocalDateTime).parse(diary.createdAt, T(java.time.format.DateTimeFormatter).ISO_DATE_TIME), 'yyyy-MM-dd HH:mm:ss')} + ' ago'"></div>
+                                             th:text="${#temporals.format(T(java.time.LocalDateTime).parse(diary.createdAt, T(java.time.format.DateTimeFormatter).ISO_DATE_TIME), 'yyyy-MM-dd HH:mm:ss')}">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -355,8 +360,9 @@
         </main>
     </div>
 </div>
-
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="js/app.js"></script>
+<script src="js/diary-manager.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         function getUrlParameter(name) {
@@ -425,30 +431,6 @@
         return null;
     }
 </script>
-
-<script>
-    function timeAgo(createdAt) {
-        const createdDate = new Date(createdAt);
-        const currentDate = new Date();
-
-        const timeDifference = currentDate - createdDate;
-        const seconds = Math.floor(timeDifference / 1000);
-        const minutes = Math.floor(seconds / 60);
-        const hours = Math.floor(minutes / 60);
-        const days = Math.floor(hours / 24);
-
-        if (days > 0) {
-            return days + ' days ago';
-        } else if (hours > 0) {
-            return hours + ' hours ago';
-        } else if (minutes > 0) {
-            return minutes + ' minutes ago';
-        } else {
-            return seconds + ' seconds ago';
-        }
-    }
-</script>
-
 
 </body>
 
